# recall-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-extension.yml
src/recall/: __init__.py  cli.py  db.py  decisions.py  digest.py  embeddings.py  hashing.py  server.py  staleness.py  watcher.py
src/recall/ingest/: __init__.py  agents.py  copilot.py  generic.py  git.py  github.py
tests/: test_smoke.py  test_upgrades.py
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
